--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -9,62 +9,55 @@ output:
 ## Review {.tabset .tabset-fade .tabset-pills}
 ### Problem 1
 Let $X_1,X_2,X_3\sim iid\ N(\mu,\sigma ^2), and\ Z_i=\frac{X_i-\mu}{\sigma}\ for\ i=1,2,3$  
- (a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
+(a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
 
-$X_1,X_2,X_3$ are three random variable that follows a normal distribution with same mean μ and variance σ 2   
-
-Z is called the standard normal random variable.  
+>$X_1,X_2,X_3$ are three _independent and identically distributed_ random variable that follows a normal distribution with same mean $\mu$ and variance $\sigma^2$  
+$Z_i$ is called a standard normal random variable.  
  $Z_{i}\sim iid\ N\left(0,1\right)$   
 
-The random variables Xl l . . . , Xn are called a random sample of
-size n from the population f (x) if X I, . ables and the marginal pdf or pmf of ea.ch. , XXn are mutually independent random varii
-is the same function f(x). Alternatively, Xl , . . . , Xn are called independent and identically distributed random variables with
-pdf or pmf f(x). This is commonly abbreviated to iid random variables.
+Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
+(a). Comptute the $E(Y_{1})$  
+$$\because X_i\ are\ independent\ variables$$
+$$So\quad E(Y_1)=E(\sum_{i=1}^3Z_i)=\sum_{i=1}^3E(Z_i)=0$$
+(a). Comptute the $Var(Y_{1})$  
 
+$$And\quad Var(Y_{1})=Var(\sum_{i=1}^3Z_i)=\sum_{i=1}^3Var(Z_i)=3$$
 
-* Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
- (a). Comptute the $E(Y_{1})$  
+(a). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
+> According the above results, and $Z_i$ is a SND  
 
-$$E(Y_{1})=0$$
+$$\therefore Y_1\sim iid\ N(0,3)$$
+(a). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
+> According the definition of Chi-square distribution  
+And $Z_i$ is a SND  
 
- (a). Comptute the $Var(Y_{1})$  
-
-$$Var(Y_{1})=3$$
-
- (a). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
-
-$$Y_{1}\sim iid\ N(0,3)$$
-
- (a). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
-
+$$\therefore Z_i^2\sim \chi_1^2 $$
 
 Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
- (a). Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s). 
+(a). Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s). 
 
-Let Z = (Y − μ )/ σ . If Y ∼ N ( μ , σ 2 ), then Z 2 follows a χ 2 distribution, which we denote by  
+>Let Z = (Y − μ )/ σ . If Y ∼ N ( μ , σ 2 ), then Z 2 follows a χ 2 distribution, which we denote by
 
-$$Z^2\sim\chi_{1}^2$$
+$$Y_2=\sum_{i=1}^3Z_i\sim\chi_3^2$$
 
-The key point is that the square of a standard normal random variable is a χ 2 random variable with one degree of freedom.  
-
-Let Y 1 , Y 2 , . . . , Y n be independent normally distributed random variables with
+>The key point is that the square of a standard normal random variable is a χ 2 random variable with one degree of freedom.  
+Let Y 1 , Y 2 , . . . , Y n be independent normally distributed random variables with  
 E ( Y i ) = μ i and Var Yi i ( )=σ 2, and let
 Zi=Yi−μi/σi.
 Then
-Σni=2Zi1n2
-
-$$Y_{2}\sim\chi_{3}^2$$  
-
+Σni=2Zi1n2  
 The key points are (1) the sum of n squared standard normal random variables follows a χ 2 distribution with n degrees of freedom and (2) the sum of χ 2 random variables also follows a χ 2 distribution.  
 
 ### Problem 2
 
-* Let $X_{1},X_{2},...X_{n}\sim iid\ N\left(0,\sigma ^{2}\right), and\ \overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}$  
-a. Specify the distribution of $\overline{A}$ along with the value(s) of parameter(s).  
+Let $X_{1},X_{2},...X_{n}\sim iid\ N\left(0,\sigma ^{2}\right), and\ \overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}$  
+(a). Specify the distribution of $\overline{A}$ along with the value(s) of parameter(s).  
+> According the Center Limit Theorem,
 
-$$\overline{A}\sim\ N(0,1)$$
-
-* Let $W\sim\chi_{\nu_{1}}^2$ where $\nu_{1}$ is the degrees of freedom, $\overline{X}\ and\ W$ are indipendent.  
+$$E(\overline{A})=0$$
+$$Var(\overline{A})=\frac1{n^2}\sum_{i=1}^n[Var(X_i)]=\frac{n\sigma^2}{n^2}=\frac{\sigma^2}n$$
+$$\therefore \overline{A}\sim\ N(0,\frac{\sigma^2}n)$$
+Let $W\sim\chi_{\nu_{1}}^2$ where $\nu_{1}$ is the degrees of freedom, $\overline{X}\ and\ W$ are indipendent.  
 * Consider the new random variable $\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_{1}}}$  
 (a). Specify the distribution of this new randome variable along with the value(s) of parameter(s).  
 
@@ -110,6 +103,6 @@ $$=\frac1n\sum(\beta_0+\beta_1X_i+\epsilon_i)-$$
  Because X is independent variable
  
 #### If
- According the definition of Chi-square distribution
+ 
  
 ##### $\therefore $
