--- a/docs/lab/lab01.Rmd
+++ b/docs/lab/lab01.Rmd
@@ -8,51 +8,46 @@ output:
 ---
 ## Review {.tabset .tabset-fade .tabset-pills}
 ### Problem 1
-Let $X_1,X_2,X_3\sim iid\ N(\mu,\sigma ^2), and\ Z_i=\frac{X_i-\mu}{\sigma}\ for\ i=1,2,3$  
+ Let $X_1,X_2,X_3\sim iid\ N(\mu,\sigma ^2), and\ Z_i=\frac{X_i-\mu}{\sigma}\ for\ i=1,2,3$  
 (a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
 
->$X_1,X_2,X_3$ are three _independent and identically distributed_ random variable that follows a normal distribution with same mean $\mu$ and variance $\sigma^2$  
-$Z_i$ is called a standard normal random variable.  
- $Z_{i}\sim iid\ N\left(0,1\right)$   
+ $X_1,X_2,X_3$ are three _independent and identically distributed_ random variable that follows a normal distribution with same mean $\mu$ and variance $\sigma^2$  
+$Z_i=\frac{X_i-\mu}n$ is called a standard normal random variable.  
 
-Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
+ $$\therefore Z_{i}\sim iid\ N\left(0,1\right)$$   
+
+ Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
 (a). Comptute the $E(Y_{1})$  
-$$\because X_i\ are\ independent\ variables$$
-$$So\quad E(Y_1)=E(\sum_{i=1}^3Z_i)=\sum_{i=1}^3E(Z_i)=0$$
+ $$\because X_i\ are\ independent\ variables\ and\ \frac{X_i-\mu}\sigma=Z_i\sim N(0,1)$$
+ $$So\quad E(Y_1)=E(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3E(Z_i)=0$$
 (a). Comptute the $Var(Y_{1})$  
-
-$$And\quad Var(Y_{1})=Var(\sum_{i=1}^3Z_i)=\sum_{i=1}^3Var(Z_i)=3$$
-
+ $$And\quad Var(Y_{1})=Var(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3Var(Z_i)=3$$
 (a). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
-> According the above results, and $Z_i$ is a SND  
+ > According the above results, and $Z_i$ is a SND  
 
-$$\therefore Y_1\sim iid\ N(0,3)$$
+ $$\therefore Y_1\sim N[E(Z_i),Var(Z_i)]=N(0,3)$$
 (a). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
-> According the definition of Chi-square distribution  
-And $Z_i$ is a SND  
+ > According the definition of Chi-square distribution  
+   When $Z_i$ is a SND,  $Z_{i}^2$ is a chi square distribution with 1 degree of freedom
 
-$$\therefore Z_i^2\sim \chi_1^2 $$
+ $$\therefore Z_i^2\sim \chi_1^2 $$
 
-Let $Y_{2}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
-(a). Specify the probability distribution of $Y_{2}$ along with the value(s) of parameter(s). 
+ Let $Y_2=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
+(a). Specify the probability distribution of $Y_2$ along with the value(s) of parameter(s). 
 
->Let Z = (Y − μ )/ σ . If Y ∼ N ( μ , σ 2 ), then Z 2 follows a χ 2 distribution, which we denote by
+>According the definition of Chi-square distribution,  when $X_i$ be indepentdent normally distributed random variables with $E(X_i)=\mu$ and $Var(X_i)=\sigma^2$, $\frac{X_{i}-\mu}{\sigma}=Z_i\$  
+then the sum of n squared standard normal random variables follows a $\chi^2$ distribution with n degrees of freedom  
 
-$$Y_2=\sum_{i=1}^3Z_i\sim\chi_3^2$$
-
->The key point is that the square of a standard normal random variable is a χ 2 random variable with one degree of freedom.  
-Let Y 1 , Y 2 , . . . , Y n be independent normally distributed random variables with  
-E ( Y i ) = μ i and Var Yi i ( )=σ 2, and let
-Zi=Yi−μi/σi.
-Then
-Σni=2Zi1n2  
-The key points are (1) the sum of n squared standard normal random variables follows a χ 2 distribution with n degrees of freedom and (2) the sum of χ 2 random variables also follows a χ 2 distribution.  
-
+ $$\therefore Y_2=\sum_{i=1}^3Z_i\sim\chi_3^2$$
 ### Problem 2
 
 Let $X_{1},X_{2},...X_{n}\sim iid\ N\left(0,\sigma ^{2}\right), and\ \overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}$  
 (a). Specify the distribution of $\overline{A}$ along with the value(s) of parameter(s).  
-> According the Center Limit Theorem,
+> According the definition, when $X_i$ are independent identical random variables of size n with *mean of the distribution* $\mu$ and *variance* $\sigma^2$ from a population, the *sample mean* $\overline{A}=\frac{\sum_{i=1}^{n}X_{i}}{n}$
+
+2
+
+Center Limit Theorem,
 
 $$E(\overline{A})=0$$
 $$Var(\overline{A})=\frac1{n^2}\sum_{i=1}^n[Var(X_i)]=\frac{n\sigma^2}{n^2}=\frac{\sigma^2}n$$
@@ -83,7 +78,7 @@ where t v is the t distribution with v degrees of freedom.
 
 $$\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}$$
 
- - where F ν , η is the F distribution with ν and η degrees of freedom. The key point is that the ratio of two independent χ 2 random variables, each divided by their respective degrees of freedom, follows an F distribution.  
+> where F ν , η is the F distribution with ν and η degrees of freedom. The key point is that the ratio of two independent χ 2 random variables, each divided by their respective degrees of freedom, follows an F distribution.  
 
 ### Problem 3
 * Let $Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$  
