--- a/docs/lecture/lecture01.Rmd
+++ b/docs/lecture/lecture01.Rmd
@@ -25,6 +25,8 @@ Definition:
 * The **sample space** (S) is the set of all possible outcomes of an experiment.
 * An **event** is a subset of S
 
+{.table .table-condensed .table-striped .text-left}
+
  <span>name</span> | <span>symbol</span>
  :---: | :---:
  subset | $\subset$ 
