--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -11,32 +11,34 @@ output:
  Let $X_1,X_2,X_3\sim iid\ N(\mu,\sigma ^2), and\ Z_i=\frac{X_i-\mu}{\sigma}\ for\ i=1,2,3$  
  (a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
 
- > $X_1,X_2,X_3$ are three _independent and identically distributed_ random variable that follows a normal distribution with same mean $\mu$ and variance $\sigma^2$  
-$Z_i=\frac{X_i-\mu}n$ is called a standard normal random variable.  
+ > $X_1,X_2,X_3$ are three **independent and identically distributed random variable** that follows a normal distribution with same mean $\mu$ and variance $\sigma^2$  
+$Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.  
 
  $$\therefore Z_{i}\sim iid\ N\left(0,1\right)$$   
 
  Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
- (a). Comptute the $E(Y_{1})$  
+ (b). Comptute the $E(Y_{1})$  
  $$\because X_i\ are\ independent\ variables\ and\ \frac{X_i-\mu}\sigma=Z_i\sim N(0,1)$$
  $$So\quad E(Y_1)=E(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3E(Z_i)=0$$
- (a). Comptute the $Var(Y_{1})$  
+ (c). Comptute the $Var(Y_{1})$  
  $$And\quad Var(Y_{1})=Var(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3Var(Z_i)=3$$
-(a). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
+ (d). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
+
  > According the above results, and $Z_i$ is a SND  
 
  $$\therefore Y_1\sim N[E(Z_i),Var(Z_i)]=N(0,3)$$
-(a). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
- > According the definition of Chi-square distribution  
+ (e). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
+
+ > According the definition of **Chi-square** distribution  
    When $Z_i$ is a SND,  $Z_{i}^2$ is a chi square distribution with 1 degree of freedom
 
  $$\therefore Z_i^2\sim \chi_1^2 $$
 
  Let $Y_2=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
- (a). Specify the probability distribution of $Y_2$ along with the value(s) of parameter(s). 
+ (f). Specify the probability distribution of $Y_2$ along with the value(s) of parameter(s). 
 
  > According the definition of Chi-square distribution,  when $X_i$ be indepentdent normally distributed random variables with $E(X_i)=\mu$ and $Var(X_i)=\sigma^2\quad \frac{X_{i}-\mu}{\sigma}=Z_i\$  
-then the sum of n squared standard normal random variables follows a $\chi^2$ distribution with n degrees of freedom  
+then the sum of n squared standard normal random variables follows a $\chi^2$ distribution **with n degrees of freedom**  
 
  $$\therefore Y_2=\sum_{i=1}^3(\frac{X_{i}-\mu}{\sigma})=\sum_{i=1}^3Z_i\sim\chi_3^2$$
 
@@ -53,11 +55,11 @@ then the sum of n squared standard normal random variables follows a $\chi^2$ di
 
  Let $W\sim\chi_{\nu_{1}}^2$ where $\nu_{1}$ is the degrees of freedom, $\overline{X}\ and\ W$ are indipendent.  
  Consider the new random variable $\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_{1}}}$  
- (a). Specify the distribution of this new randome variable along with the value(s) of parameter(s).  
+ (b). Specify the distribution of this new randome variable along with the value(s) of parameter(s).  
 
- > According the **Central Limit Theorem** If $X_i\quad i=1,2,...n$ are independent identically distributed random  variables with $E(Y_i)=\mu$ and $Var(Y_i)=\sigma^2<\infty$ and n is sufficiently large, then $\frac{\overline{X}\sqrt n}{\sigma}$ a normal distribution.
+ > According the **Central Limit Theorem**, If $X_i\quad i=1,2,...n$ are independent identically distributed random  variables with $E(Y_i)=\mu$ and $Var(Y_i)=\sigma^2<\infty$ and n is sufficiently large, then $\frac{\overline{X}\sqrt n}{\sigma}$ a normal distribution.
 
- > According the defination of t distribution, when $Z\sim N(0, 1), W\sim\chi_{\nu_1}^2 $, and Z and W are independent, then  
+ > According the defination of **t distribution**, when $Z\sim N(0, 1), W\sim\chi_{\nu_1}^2 $, and Z and W are independent, then
 
 $$\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_1}}=\frac{Z}{\sqrt{W/\nu_1}}\sim t_{\nu_1}$$  
 
@@ -65,32 +67,40 @@ $$\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_1}}=\frac{Z}{\sqrt{W/\nu_1}}\sim 
 
  Let $V\sim\chi_{\nu_2}^2$ where $\nu_{2}$ is the degrees of freedom, $V\ and\ W$ are indipendent.  
  Consider the new random variable $\frac{W/\nu_{1}}{V/\nu_{2}}$    
- (a). Specify the distribution of this new randome variable and provide value(s) of parameter(s).  
+ (c). Specify the distribution of this new randome variable and provide value(s) of parameter(s).  
  
- > According the definition of t distribution, when $W\sim\chi_{\nu_{1}}^2,\quad W\sim\chi_{\nu_{1}}^2,\quad W\ and\ V$ are independent, then the ratio of two independent chi square random variables, each divided by their respective degrees of freedom, follows an F distribution.
+ > According the definition of **F distribution**, when $W\sim\chi_{\nu_{1}}^2,\quad W\sim\chi_{\nu_{1}}^2,\quad W\ and\ V$ are independent, then the ratio of two independent chi square random variables, each divided by their respective degrees of freedom, follows an F distribution.
 
 $$\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}$$
 
  > where $F\nu_1,\nu_2$ is the F distribution with $\nu_1$ and $\nu_2$ degrees of freedom.     
 
 ### Problem 3
-* Let $Y|x=a+bx+\epsilon\ where\ a, b\ are\ constants, E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$  
-a. Comptute the $E(Y|x_{0})$  
 
-$$=a+bx$$
+ Let $Y|x=a+bx+\epsilon$ where a, b are constants, $E(\epsilon)=0,\ and\ Var(\epsilon)=\sigma^2$  
+ a. Comptute the $E(Y|x_{0})$  
+
+$$E(Y|x_{0})=E(a+bX_0+\epsilon)=E(a)+E(bX_0)+E(\epsilon)$$
+$$\because a,b,X_0\ are\ constant\quad E(a)=a,\ E(bX_0)=bX_0,\ and\quad E(\epsilon)=0$$
+$$\therefore E(Y|x_{0})=a+bX_0$$
 
 a. Comptute the $Var(Y|x_{0})$  
-
-$$=\sigma^2$$
+$$\because a,b,X_0\ are\ constant\quad Var(a)=0,\ Var(bX_0)=0,\ and\quad Var(\epsilon)=\sigma^2$$
+$$\therefore Var(Y|x_{0})=\sigma^2$$
 
 ### Proof $E(\hat{\beta_0})=\beta_0$
+According we known: 
+
+
+---------|---------
+sum of cross-products | $S_{xx}$ 
+sample mean  | $\overline X$
+
+
 $$\because \hat{\beta_0}=\overline{y}-\overline{x}\hat{\beta_1}=\frac{\sum_{i=1}^nY_i}{n}-\overline{x}(\sum C_iY_i)=\sum(\frac1n-\overline{x}C_i)$$  
 $$So\quad E(\hat{\beta_0})=\sum_{i-1}^n(\frac1n-\overline{x}C_i)E(\beta_0+\beta_1X_i+\epsilon_i)=\sum[\frac1nE(\beta_0+\beta_1X_i+\epsilon_i)-\overline{x}C_iE(\beta_0+\beta_1X_i+\epsilon_i)]$$ 
 $$=\frac1n\sum(\beta_0+\beta_1X_i+\epsilon_i)-$$
- $E(\hat{\beta_0})=\beta_0$
- Because X is independent variable
- 
-#### If
  
  
-##### $\therefore $
+ $$\begin{align} E(\hat{\beta_0})=\beta_0 
+ \end{align}$$
