--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -89,22 +89,21 @@ $$\because a,b,X_0\ are\ constant\quad Var(a)=0,\ Var(bX_0)=0,\ and\quad Var(\ep
 $$\therefore Var(Y|x_{0})=\sigma^2$$
 
 ### Proof $E(\hat{\beta_0})=\beta_0$
-According we known: 
-{.table .table-condensed .table-striped .text-left}
+We have known: 
+
 
  <span>name</span> | <span>name</span> | <span>symbol</span>
  :---: | :---: | :---:
- 1 | slope   | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nC_iY_i$
- 1 | Intercept   |  $\hat{\beta_0}=\overline Y-\hat{\beta_1}\overline X=\frac1n{\sum_{i=1}^nY_i}-\overline X(\sum_{i=1}^n C_iY_i)=\sum_{i=1}^n(\frac1n-\overline{X}C_i)Y_i$
- 1 |         | $C_i=\frac{X_i-\overline X}{S_{xx}}$
- 1 | sample mean  | $\overline X=\frac1n\sum_{i=1}^n X_i $
- 1 | sum of cross-products | $S_{xx}$ 
+ 1. | slope   | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nC_iY_i$
+ 1. | Intercept   |  $\hat{\beta_0}=\overline Y-\hat{\beta_1}\overline X=\frac1n{\sum_{i=1}^nY_i}-\overline X(\sum_{i=1}^n C_iY_i)=\sum_{i=1}^n(\frac1n-\overline{X}C_i)Y_i$
+ 1. |         | $C_i=\frac{X_i-\overline X}{S_{xx}}$
+ 1. | sample mean  | $\overline X=\frac1n\sum_{i=1}^n X_i$
+ 1. | sum of cross-products | $S_{xx}$ 
 
 
-$$So\quad E(\hat{\beta_0})=\sum_{i-1}^n(\frac1n-\overline XC_i)E(\beta_0+\beta_1X_i+\epsilon_i)=\sum_{i=1}^n[\frac1nE(\beta_0+\beta_1X_i+\epsilon_i)-\overline XC_iE(\beta_0+\beta_1X_i+\epsilon_i)]$$ 
+ $$According\ 1,2,\quad E(\hat{\beta_0})=\sum_{i-1}^n(\frac1n-\overline XC_i)E(\beta_0+\beta_1X_i+\epsilon_i)=\sum_{i=1}^n[\frac1nE(\beta_0+\beta_1X_i+\epsilon_i)-\overline XC_iE(\beta_0+\beta_1X_i+\epsilon_i)]$$ 
 
 $$=\frac1n\sum_{i=1}^n[\beta_0+\beta_1X_i+E(\epsilon_i)]-\overline XC_iE(\beta_0+\beta_1X_i+\epsilon_i)$$
- 
  
  
  $$\therefore E(\hat{\beta_0})=\beta_0+\beta_1\overline X-0-\beta_1\overline X=\beta_0$$
