--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -97,22 +97,24 @@ We have known:
 
 
  <span>number</span> | <span>meaning</span> | <span>equation</span>
- :---: | :---: | :---:
-1. |  population regression model | $Y=\beta_1+\beta_0X+\epsilon$
-1. |  sample regression model | $Y_i=\beta_1+\beta_0X_i+\epsilon_i,\quad i=1,2,3...n$
-1. |  fitted regression model (fitted value & least-squares estimators | $\hat{Y_i}=\hat{\beta_1}+\hat{\beta_0}X_i$
- (1). | slope   | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nC_iY_i$
- (1). | The solution to thenormal equations (Intercept) |  $\hat{\beta_0}=\overline Y-\hat{\beta_1}\overline X=\frac1n{\sum_{i=1}^nY_i}-\overline X(\sum_{i=1}^n C_iY_i)=\sum_{i=1}^n(\frac1n-\overline{X}C_i)Y_i$
- 1 |         | $C_i=\frac{X_i-\overline X}{S_{xx}}$
- 1. | sample mean  | $\overline X=\frac1n\sum_{i=1}^n X_i$
- 2. | sum of cross-products | $S_{xx}$ 
+ - | :----------: | :----------:
+(1) |  population regression model | $Y=\beta_1+\beta_0X+\epsilon$
+(2) |  sample regression model | $Y_i=\beta_1+\beta_0X_i+\epsilon_i,\quad i=1,2,3...n$
+(3) |  fitted regression model (fitted value  | $\hat{Y_i}=\hat{\beta_1}+\hat{\beta_0}X_i$
+(4) | least-squares estimator (slope) | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nC_iY_i$
+(5) | unbiased estimator (Intercept) |  $\hat{\beta_0}=\overline Y-\hat{\beta_1}\overline X=\frac1n{\sum_{i=1}^nY_i}-\overline X(\sum_{i=1}^n C_iY_i)=\sum_{i=1}^n(\frac1n-\overline{X}C_i)Y_i$
+(6) |         | $C_i=\frac{X_i-\overline X}{S_{xx}}$
+(7) | sample mean  | $\overline X=\frac1n\sum_{i=1}^n X_i$
+(8) | sum of cross-products | $S_{xx}$ 
 
 
  $$According\ 1,2,\quad E(\hat{\beta_0})=E[\sum_{i-1}^n(\frac1n-\overline XC_i)(\beta_0+\beta_1X_i+\epsilon_i)]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1X_i+\epsilon_i)-\overline X\sum_{i=1}^nC_iE(\beta_0+\beta_1X_i+\epsilon_i)]$$ 
 
 $$\text{According 1, 2}\quad=\frac1n\sum_{i=1}^n[\beta_0+\beta_1X_i+E(\epsilon_i)]-\overline X\sum_{i=1}^nC_i[\beta_0+\beta_1X_i+E(\epsilon_i)]=\beta_0+\beta_1\frac{\sum_{i=1}^nX_i}n-\beta_0\overline X\sum_{i=1}^nC_i-\beta_1\overline X\sum_{i=1}^nC_iX_i$$
  
- $$\because \sum_{i=1}^nC_i=\sum_{i=1}^n\frac{X_i-\overline X}{}$$
+ $$\because\quad \sum_{i=1}^nC_i=\sum_{i=1}^n\frac{X_i-\overline X}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(X_i-\overline X)=\frac1{S_{xx}}(n\overline X-n\overline X)=0$$
+ 
+ $$According 1\quad \sum_{i=1}^nC_iX_i=\frac1{S_{xx}}\sum_{i=1}^nX_i(X_i-\overline X)=\frac{S_{xx}}{S_{xx}}=1$$
  
  $$\therefore E(\hat{\beta_0})=\beta_0+\beta_1\overline X-0-\beta_1\overline X=\beta_0$$
 
