--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -16,17 +16,17 @@ $Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.
 
  $$\therefore Z_{i}\sim iid\ N\left(0,1\right)$$   
 
- Let $Y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
- (b). Comptute the $E(Y_{1})$  
+ Let $y_{1}=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})$  
+ (b). Comptute the $E(y_{1})$  
  $$\because X_i\ are\ independent\ variables\ and\ \frac{X_i-\mu}\sigma=Z_i\sim N(0,1)$$
- $$So\quad E(Y_1)=E(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3E(Z_i)=0$$
- (c). Comptute the $Var(Y_{1})$  
- $$And\quad Var(Y_{1})=Var(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3Var(Z_i)=3$$
- (d). Specify the probability distribution of $Y_{1}$ along with the value(s) of parameter(s).  
+ $$So\quad E(y_1)=E(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3E(Z_i)=0$$
+ (c). Comptute the $Var(y_{1})$  
+ $$And\quad Var(y_{1})=Var(\sum_{i=1}^3\frac{X_i-\mu}\sigma)=\sum_{i=1}^3Var(Z_i)=3$$
+ (d). Specify the probability distribution of $y_{1}$ along with the value(s) of parameter(s).  
 
  > According the above results, and $Z_i$ is a SND  
 
- $$\therefore Y_1\sim N[E(Z_i),Var(Z_i)]=N(0,3)$$
+ $$\therefore y_1\sim N[E(Z_i),Var(Z_i)]=N(0,3)$$
  (e). Specify the probability distribution of $Z_{i}^2$ along with the value(s) of parameter(s).  
 
  > According the definition of **Chi-square** distribution  
@@ -34,13 +34,13 @@ $Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.
 
  $$\therefore Z_i^2\sim \chi_1^2 $$
 
- Let $Y_2=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
- (f). Specify the probability distribution of $Y_2$ along with the value(s) of parameter(s). 
+ Let $y_2=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
+ (f). Specify the probability distribution of $y_2$ along with the value(s) of parameter(s). 
 
  > According the definition of Chi-square distribution,  when $X_i$ be indepentdent normally distributed random variables with $E(X_i)=\mu$ and $Var(X_i)=\sigma^2\quad \frac{X_{i}-\mu}{\sigma}=Z_i\$  
 then the sum of n squared standard normal random variables follows a $\chi^2$ distribution **with n degrees of freedom**  
 
- $$\therefore Y_2=\sum_{i=1}^3(\frac{X_{i}-\mu}{\sigma})=\sum_{i=1}^3Z_i\sim\chi_3^2$$
+ $$\therefore y_2=\sum_{i=1}^3(\frac{X_{i}-\mu}{\sigma})=\sum_{i=1}^3Z_i\sim\chi_3^2$$
 
 ### Problem 2
 
@@ -81,15 +81,15 @@ $$\frac{W/\nu_{1}}{V/\nu_{2}}\sim F_{\nu_{1},\nu_{2}}$$
  
 a. Comptute the $E(Y|x_{0})$  
 
-$$E(Y|x_{0})=E(a+bX_0+\epsilon)=E(a)+E(bX_0)+E(\epsilon)$$
-$$\because a,b,X_0\ are\ constant\quad E(a)=a,\ E(bX_0)=bX_0,\ and\quad E(\epsilon)=0$$
-$$\therefore E(Y|x_{0})=a+bX_0$$
+$$E(Y|x_{0})=E(a+bx_0+\epsilon)=E(a)+E(bx_0)+E(\epsilon)$$
+$$\because a,b,x_0\ are\ constant\quad E(a)=a,\ E(bx_0)=bx_0,\ and\quad E(\epsilon)=0$$
+$$\therefore E(Y|x_{0})=a+bx_0$$
 
 a. Comptute the $Var(Y|x_{0})$  
 
-$$Var(Y|x_{0})=Var(a+bX_0+\epsilon)=Var(a)+Var(bX_0)+Var(\epsilon)$$
+$$Var(Y|x_{0})=Var(a+bx_0+\epsilon)=Var(a)+Var(bx_0)+Var(\epsilon)$$
 
-$$\because a,b,X_0\ are\ constant\quad Var(a)=0,\ Var(bX_0)=0,\ and\quad Var(\epsilon)=\sigma^2$$
+$$\because a,b,x_0\ are\ constant\quad Var(a)=0,\ Var(bx_0)=0,\ and\quad Var(\epsilon)=\sigma^2$$
 $$\therefore Var(Y|x_{0})=\sigma^2$$
 
 ### Proof $E(\hat{\beta_0})=\beta_0$
@@ -98,29 +98,25 @@ We have known:
 
  <span>number</span> | <span>meaning</span> | <span>equation</span>
  - | :----------: | :----------:
-(1) |  population regression model | $Y=\beta_1+\beta_0X+\epsilon$
-(2) |  sample regression model | $Y_i=\beta_1+\beta_0X_i+\epsilon_i,\quad i=1,2,3...n$
-(3) |  fitted regression model (fitted value  | $\hat{Y_i}=\hat{\beta_1}+\hat{\beta_0}X_i$
-(4) | least-squares estimator (slope) | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nC_iY_i$
-(5) | unbiased estimator (Intercept) |  $\hat{\beta_0}=\overline Y-\hat{\beta_1}\overline X=\frac1n{\sum_{i=1}^nY_i}-\overline X(\sum_{i=1}^n C_iY_i)=\sum_{i=1}^n(\frac1n-\overline{X}C_i)Y_i$
-(6) |         | $C_i=\frac{X_i-\overline X}{S_{xx}}$
-(7) | sample mean  | $\overline X=\frac1n\sum_{i=1}^n X_i$
-(8) | sum of cross-products | $S_{xx}$ 
+(1) |  population regression model | $y=\beta_1+\beta_0x+\epsilon$
+(2) |  assumption_2 of simple linear regression | $E(\epsilon)=0$
+(3) |  mean of this distribution | $E(y|x)=a+bx$
+(4) |  sample regression model | $y_i=\beta_1+\beta_0x_i+\epsilon_i,\quad i=1,2,3...n$
+(5) |  fitted regression model (fitted value)  | $\hat{y_i}=\hat{\beta_1}+\hat{\beta_0}x_i$
+(6) | least-squares estimator (slope) | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nC_iy_i$
+(7) | unbiased estimator (Intercept) |  $\hat{\beta_0}=\overline y-\hat{\beta_1}\overline x=\frac1n{\sum_{i=1}^ny_i}-\overline x(\sum_{i=1}^n C_iy_i)=\sum_{i=1}^n(\frac1n-\overline{x}C_i)y_i$
+(8) | sample mean  |  $\overline x=\frac1n\sum_{i=1}^n x_i$
+(9) | sum of corrected squares of $x_i$ | $S_{xx}=\sum_{i=1}^nx_i(x_i-\overline x)=\sum_{i=1}^n(x_i-\overline x)^2$ 
+(10) | sum of corrected cross-products of $x_i\& y_i$ | $S_{xy}=\sum_{i=1}^nx_i(x_i-\overline x)$ 
+(11) | | $C_i=\frac{x_i-\overline x}{S_{xx}}$
 
 
- $$According\ 1,2,\quad E(\hat{\beta_0})=E[\sum_{i-1}^n(\frac1n-\overline XC_i)(\beta_0+\beta_1X_i+\epsilon_i)]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1X_i+\epsilon_i)-\overline X\sum_{i=1}^nC_iE(\beta_0+\beta_1X_i+\epsilon_i)]$$ 
+ $$\text{According 4, 7}\quad E(\hat{\beta_0})=E[\sum_{i-1}^n(\frac1n-\overline xC_i)(\beta_0+\beta_1x_i+\epsilon_i)]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1x_i+\epsilon_i)-\overline x\sum_{i=1}^nC_iE(\beta_0+\beta_1x_i+\epsilon_i)]$$ 
 
-$$\text{According 1, 2}\quad=\frac1n\sum_{i=1}^n[\beta_0+\beta_1X_i+E(\epsilon_i)]-\overline X\sum_{i=1}^nC_i[\beta_0+\beta_1X_i+E(\epsilon_i)]=\beta_0+\beta_1\frac{\sum_{i=1}^nX_i}n-\beta_0\overline X\sum_{i=1}^nC_i-\beta_1\overline X\sum_{i=1}^nC_iX_i$$
+$$\text{According 2, 3}\quad=\frac1n\sum_{i=1}^n[\beta_0+\beta_1x_i+E(\epsilon_i)]-\overline x\sum_{i=1}^nC_i[\beta_0+\beta_1x_i+E(\epsilon_i)]=\beta_0+\beta_1\frac{\sum_{i=1}^nx_i}n-\beta_0\overline x\sum_{i=1}^nC_i-\beta_1\overline x\sum_{i=1}^nC_ix_i$$
  
- $$\because\quad \sum_{i=1}^nC_i=\sum_{i=1}^n\frac{X_i-\overline X}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(X_i-\overline X)=\frac1{S_{xx}}(n\overline X-n\overline X)=0$$
+ $$\text{According 8, 11}\quad \sum_{i=1}^nC_i=\sum_{i=1}^n\frac{x_i-\overline x}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(x_i-\overline x)=\frac1{S_{xx}}(n\overline x-n\overline x)=0$$
  
- $$According 1\quad \sum_{i=1}^nC_iX_i=\frac1{S_{xx}}\sum_{i=1}^nX_i(X_i-\overline X)=\frac{S_{xx}}{S_{xx}}=1$$
+ $$\text{According 9,11}\quad \sum_{i=1}^nC_ix_i=\frac1{S_{xx}}\sum_{i=1}^nx_i(x_i-\overline x)=\frac{S_{xx}}{S_{xx}}=1$$
  
- $$\therefore E(\hat{\beta_0})=\beta_0+\beta_1\overline X-0-\beta_1\overline X=\beta_0$$
-
-$$\begin{align}
-A_1&=N_0(\lambda;\Omega’)-\phi(\lambda;\Omega’),\\
-A_2&=\phi(\lambda;\Omega’)-\phi(\lambda;\Omega),\\
-\intertext{and}
-A_3&=\mathcal{N}(\lambda;\omega).
-\end{align}$$
+ $$\therefore\quad E(\hat{\beta_0})=\beta_0+\beta_1\overline x-0-\beta_1\overline x=\beta_0$$
