--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -3,10 +3,12 @@ title: 'STAT564 Homework 0'
 author: "Shen Qu"
 date: "9/25/2017"
 output: 
-  html_document
+  html_document:
+  toc: true
+  toc_float: true
 
 ---
-## Review {.tabset .tabset-fade .tabset-pills}
+## Review <!--{.tabset .tabset-fade .tabset-pills}-->
 ### Problem 1
  Let $X_1,X_2,X_3\sim iid\ N(\mu,\sigma ^2), and\ Z_i=\frac{X_i-\mu}{\sigma}\ for\ i=1,2,3$  
  (a). Specify the probability distribution of $Z_i$ along with the value(s) of parameter(s).  
@@ -97,7 +99,7 @@ We have known:
 
 
  <span>number</span> | <span>meaning</span> | <span>equation</span>
- - | :----------: | :----------:
+ - | :---------- | :----------
 (1) |  population regression model | $y=\beta_1+\beta_0x+\epsilon$
 (2) |  assumption_2 of simple linear regression | $E(\epsilon)=0$
 (3) |  mean of this distribution | $E(y|x)=a+bx$
@@ -111,12 +113,12 @@ We have known:
 (11) | | $C_i=\frac{x_i-\overline x}{S_{xx}}$
 
 
- $$\text{According 4, 7}\quad E(\hat{\beta_0})=E[\sum_{i-1}^n(\frac1n-\overline xC_i)(\beta_0+\beta_1x_i+\epsilon_i)]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1x_i+\epsilon_i)-\overline x\sum_{i=1}^nC_iE(\beta_0+\beta_1x_i+\epsilon_i)]$$ 
+ $\text{According 4, 7}\quad E(\hat{\beta_0})=E[\sum_{i-1}^n(\frac1n-\overline xC_i)(\beta_0+\beta_1x_i+\epsilon_i)]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1x_i+\epsilon_i)-\overline x\sum_{i=1}^nC_iE(\beta_0+\beta_1x_i+\epsilon_i)]$ 
 
-$$\text{According 2, 3}\quad=\frac1n\sum_{i=1}^n[\beta_0+\beta_1x_i+E(\epsilon_i)]-\overline x\sum_{i=1}^nC_i[\beta_0+\beta_1x_i+E(\epsilon_i)]=\beta_0+\beta_1\frac{\sum_{i=1}^nx_i}n-\beta_0\overline x\sum_{i=1}^nC_i-\beta_1\overline x\sum_{i=1}^nC_ix_i$$
+$\text{According 2, 3}\quad=\frac1n\sum_{i=1}^n[\beta_0+\beta_1x_i+E(\epsilon_i)]-\overline x\sum_{i=1}^nC_i[\beta_0+\beta_1x_i+E(\epsilon_i)]=\beta_0+\beta_1\frac{\sum_{i=1}^nx_i}n-\beta_0\overline x\sum_{i=1}^nC_i-\beta_1\overline x\sum_{i=1}^nC_ix_i$
  
- $$\text{According 8, 11}\quad \sum_{i=1}^nC_i=\sum_{i=1}^n\frac{x_i-\overline x}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(x_i-\overline x)=\frac1{S_{xx}}(n\overline x-n\overline x)=0$$
+ $\text{According 8, 11}\quad \sum_{i=1}^nC_i=\sum_{i=1}^n\frac{x_i-\overline x}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(x_i-\overline x)=\frac1{S_{xx}}(n\overline x-n\overline x)=0$
  
- $$\text{According 9,11}\quad \sum_{i=1}^nC_ix_i=\frac1{S_{xx}}\sum_{i=1}^nx_i(x_i-\overline x)=\frac{S_{xx}}{S_{xx}}=1$$
+ $\text{According 9,11}\quad \sum_{i=1}^nC_ix_i=\frac1{S_{xx}}\sum_{i=1}^nx_i(x_i-\overline x)=\frac{S_{xx}}{S_{xx}}=1$
  
  $$\therefore\quad E(\hat{\beta_0})=\beta_0+\beta_1\overline x-0-\beta_1\overline x=\beta_0$$
