--- a/static/lab/lab01.Rmd
+++ b/static/lab/lab01.Rmd
@@ -39,7 +39,7 @@ $Z_i=\frac{X_i-\mu}n$ is called a **standard normal random variable**.
  Let $y_2=\sum_{i=1}^{3}(\frac{X_{i}-\mu}{\sigma})^2$  
  (f). Specify the probability distribution of $y_2$ along with the value(s) of parameter(s). 
 
- > According the definition of Chi-square distribution,  when $X_i$ be indepentdent normally distributed random variables with $E(X_i)=\mu$ and $Var(X_i)=\sigma^2\quad \frac{X_{i}-\mu}{\sigma}=Z_i\$  
+ > According the definition of Chi-square distribution,  when $X_i$ be indepentdent normally distributed random variables with $ E(X_i)=\mu\quad and\quad  Var(X_i)=\sigma^2\quad \frac{X_{i}-\mu}{\sigma}=Z_i$  
 then the sum of n squared standard normal random variables follows a $\chi^2$ distribution **with n degrees of freedom**  
 
  $$\therefore y_2=\sum_{i=1}^3(\frac{X_{i}-\mu}{\sigma})=\sum_{i=1}^3Z_i\sim\chi_3^2$$
@@ -61,7 +61,7 @@ then the sum of n squared standard normal random variables follows a $\chi^2$ di
 
  > According the **Central Limit Theorem**, If $X_i\quad i=1,2,...n$ are independent identically distributed random  variables with $E(Y_i)=\mu$ and $Var(Y_i)=\sigma^2<\infty$ and n is sufficiently large, then $\frac{\overline{X}\sqrt n}{\sigma}$ a normal distribution.
 
- > According the defination of **t distribution**, when $Z\sim N(0, 1), W\sim\chi_{\nu_1}^2 $, and Z and W are independent, then
+ > According the defination of **t distribution**, when $Z\sim N(0, 1),\ W\sim\chi_{\nu_1}^2$, and Z and W are independent, then
 
 $$\frac{\overline{X}\sqrt n}{\sigma\sqrt{W/\nu_1}}=\frac{Z}{\sqrt{W/\nu_1}}\sim t_{\nu_1}$$  
 
@@ -105,20 +105,20 @@ We have known:
 (3) |  mean of this distribution | $E(y|x)=a+bx$
 (4) |  sample regression model | $y_i=\beta_1+\beta_0x_i+\epsilon_i,\quad i=1,2,3...n$
 (5) |  fitted regression model (fitted value)  | $\hat{y_i}=\hat{\beta_1}+\hat{\beta_0}x_i$
-(6) | least-squares estimator (slope) | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nC_iy_i$
-(7) | unbiased estimator (Intercept) |  $\hat{\beta_0}=\overline y-\hat{\beta_1}\overline x=\frac1n{\sum_{i=1}^ny_i}-\overline x(\sum_{i=1}^n C_iy_i)=\sum_{i=1}^n(\frac1n-\overline{x}C_i)y_i$
+(6) | least-squares estimator (slope) | $\hat{\beta_1}=\frac{S_{xy}}{S_{xx}}=\sum_{i=1}^nc_iy_i$
+(7) | unbiased estimator (Intercept) |  $\hat{\beta_0}=\overline y-\hat{\beta_1}\overline x=\frac1n{\sum_{i=1}^ny_i}-\overline x(\sum_{i=1}^n c_iy_i)=\sum_{i=1}^n(\frac1n-\overline{x}c_i)y_i$
 (8) | sample mean  |  $\overline x=\frac1n\sum_{i=1}^n x_i$
 (9) | sum of corrected squares of $x_i$ | $S_{xx}=\sum_{i=1}^nx_i(x_i-\overline x)=\sum_{i=1}^n(x_i-\overline x)^2$ 
 (10) | sum of corrected cross-products of $x_i\& y_i$ | $S_{xy}=\sum_{i=1}^nx_i(x_i-\overline x)$ 
-(11) | | $C_i=\frac{x_i-\overline x}{S_{xx}}$
+(11) | | $c_i=\frac{x_i-\overline x}{S_{xx}}$
 
 
- $\text{According 4, 7}\quad E(\hat{\beta_0})=E[\sum_{i-1}^n(\frac1n-\overline xC_i)(\beta_0+\beta_1x_i+\epsilon_i)]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1x_i+\epsilon_i)-\overline x\sum_{i=1}^nC_iE(\beta_0+\beta_1x_i+\epsilon_i)]$ 
+ $\text{According 4, 7}\quad E(\hat{\beta_0})=E[\sum_{i-1}^n(\frac1n-\overline xc_i)(\beta_0+\beta_1x_i+\epsilon_i)]=\frac1n\sum_{i=1}^nE(\beta_0+\beta_1x_i+\epsilon_i)-\overline x\sum_{i=1}^nc_iE(\beta_0+\beta_1x_i+\epsilon_i)]$ 
 
-$\text{According 2, 3}\quad=\frac1n\sum_{i=1}^n[\beta_0+\beta_1x_i+E(\epsilon_i)]-\overline x\sum_{i=1}^nC_i[\beta_0+\beta_1x_i+E(\epsilon_i)]=\beta_0+\beta_1\frac{\sum_{i=1}^nx_i}n-\beta_0\overline x\sum_{i=1}^nC_i-\beta_1\overline x\sum_{i=1}^nC_ix_i$
+$\text{According 2, 3}\quad=\frac1n\sum_{i=1}^n[\beta_0+\beta_1x_i+E(\epsilon_i)]-\overline x\sum_{i=1}^nc_i[\beta_0+\beta_1x_i+E(\epsilon_i)]=\beta_0+\beta_1\frac{\sum_{i=1}^nx_i}n-\beta_0\overline x\sum_{i=1}^nc_i-\beta_1\overline x\sum_{i=1}^nc_ix_i$
  
- $\text{According 8, 11}\quad \sum_{i=1}^nC_i=\sum_{i=1}^n\frac{x_i-\overline x}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(x_i-\overline x)=\frac1{S_{xx}}(n\overline x-n\overline x)=0$
+ $\text{According 8, 11}\quad \sum_{i=1}^nc_i=\sum_{i=1}^n\frac{x_i-\overline x}{S_{xx}}=\frac1{S_{xx}}\sum_{i=1}^n(x_i-\overline x)=\frac1{S_{xx}}(n\overline x-n\overline x)=0$
  
- $\text{According 9,11}\quad \sum_{i=1}^nC_ix_i=\frac1{S_{xx}}\sum_{i=1}^nx_i(x_i-\overline x)=\frac{S_{xx}}{S_{xx}}=1$
+ $\text{According 9,11}\quad \sum_{i=1}^nc_ix_i=\frac1{S_{xx}}\sum_{i=1}^nx_i(x_i-\overline x)=\frac{S_{xx}}{S_{xx}}=1$
  
  $$\therefore\quad E(\hat{\beta_0})=\beta_0+\beta_1\overline x-0-\beta_1\overline x=\beta_0$$
