--- a/static/lecture561/lecture01.Rmd
+++ b/static/lecture561/lecture01.Rmd
@@ -20,15 +20,15 @@ options(repos="https://cran.rstudio.com")
 
  2018-09-26: www.mth.pdx.edu/~fountain
 #### 1. Set Theory
-Definition:  
+:           Definition  
 * An **experiment** is a process that leads to one of several possible outcomes.
 * The **sample space** (S) is the set of all possible outcomes of an experiment.
-* An **event** is a subset of S
+* An **event** is a subset of S.
 
-{.table .table-condensed .table-striped .text-left}
+
 
  <span>name</span> | <span>symbol</span>
- :---: | :---:
+ :------: | :------:
  subset | $\subset$ 
  intersection | $\cap$ 
  union | $\cup$ 
@@ -38,19 +38,21 @@ Definition:
 ---
 #### 2. Axiomatic Foundations: Borel field
 Definition: 
-* A and B are _disjiont or mutually exclusive_, if $A\cup B=\emptyset$
+* A and B are _disjoint or mutually exclusive_, if $A\cup B=\emptyset$
 * Let B be a subset of all possible subset of S. Then B is a **Borel field** or a $\sigma$-algebra, if
 
-> (1) $A\cup B=\emptyset$  
-  (2). if $A\in B, then\ A^c\in B$  
-  (3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$
+ $$(1) $A\cup B=\emptyset$$  
+ 
+ $$(2). if $A\in B, then\ A^c\in B$$  
+ 
+ $$(3). if $\{A_{1},A_{2},A_{3},...\}\subset B, then\ \bigcup_{n=1}^{\infty}\in B$$  
 
 #### 3. Kolmogorov Axioms/of Probability
 let B be a **Borel field**. Then P is a **probability set function** if
 >   
    (1). $\forall A\in B,\ P(A)\ge0$  
    (2). $P(S)=1$  
-   (3). If $A_{1},A_{2},A_{3}$,...are pairavise disjoint, then $\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
+   (3). If $A_{1},A_{2},A_{3}$,...are pairwise disjoint, then $\ P(\bigcup_{n=1}^{\infty}A_i)=\sum_{i=1}^{\infty}P(A_{i})$
 
 ---
 
@@ -59,21 +61,22 @@ Roll a 6-sides die
 > $S=\{1,2,3,4,5,6\}$
   $B=\{\emptyset ,S,\{1,2\},\{3,4,5,6\}\}$  
   
-  is a well-defined **Borel field**  
+  is a well-defined *Borel field*  
 Define：
 > $P(A)=\begin{cases}1&if\ 2\in A \\o &otherwise\end{cases}$  
   
-  This is a well-defined **probability function**  
+  This is a well-defined *probability function*  
 Define: 
 > $P(A)=\frac{element in A}{6}$  
 
-This is also a well-defined **probability function**
+This is also a well-defined *probability function*
 ---
 
-#### 5. The Calculus of Probabilities
+#### 5. The properties of the probability function
 Theorem 1.2.8:
 > (1). $\forall A\in B,\ P(A^c)=1-P(A)$  
   (2). $P(\emptyset)=0$
+  (3). $P(A)\le1$
 
 Proof (1): 
 >  $A\cap A^c=\emptyset$  
@@ -211,29 +214,3 @@ If there are n objects of K different types, then the number of ways that they c
 Ex: How many differenct ways can the letters in "STATISTICS" be arranged?
  > $\frac{10!}{3!3!1!2!1!}=\left(_{3 3 1 2 1}^{10}\right)=50400 $
 
----
-#### Homework 1:
-1.13 If $P(A)=1/3$ and $P(B^c)=1/4$, can A and B be disjoint? Explain.  
-
-1.19 If a multivariate function has continuous partial derivatives, the order in which the derivatives are calculated does not matter. Thus, for example, the function f(x, y) of two variables has equal third partials  
-a3 &3  
-8x28yf(x, y) = oyox2 f(x, y).   
-(a) How many fourth partial derivatives does a function of three variables have?  
-(b) Prove that a function of n variables has ( n+;-1 ) rth partial derivatives.  
----
-#### Homework 1:
-1.20 My telephone rings 12 times each week, the calls being randomly distributed among the 7 days. What is the probability that I get at least one call each day?  
-(Answer: .2285)
-
-1.21 Verify the following identities for n 􀂉 2.  
-(a) E:=o(-I/' ( 􀁵 ) = 0 (b) E;=lk (􀁵 ) = n2n-1  
-(c) E:=l(-l)k+1k (􀁵) 0  
----
-#### Homework 1:
-1.38 Prove each of the following statements. ( Assume that any conditioning event has positive probability.)  
-(a) If PCB) = 1 , then P(AIB) = peA) for any A.  
-(b) If A c B, then P(BIA) = 1 and P(AIB) = peAl/PCB) .  
-(c) If A and B are mutually exclusive, then  
-P(AIA U B) = peA)  
-peA) + PCB)  
-(d) peA n B n C) = P(AIB n C)P(BIC)P(C) .  
