--- a/static/lecture564/reading01.Rmd
+++ b/static/lecture564/reading01.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 1 Readings"
+title: "Week 1 Notes"
 output: 
   html_document: 
     theme: yeti
@@ -11,9 +11,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Required:
 
-- Texts
-    - [R for Data Science Chapter 1](http://r4ds.had.co.nz/introduction.html)
-    - [R for Data Science Chapter 8](http://r4ds.had.co.nz/workflow-projects.html)
-- Additional
-    - [Tracking retractions as a window into the scientific process Bad spreadsheet merge kills depression paper, quick fix resurrects it](http://retractionwatch.com/2014/07/01/bad-spreadsheet-merge-kills-depression-paper-quick-fix-resurrects-it/)
-    - [Reinhart, Rogoff... and Herndon: The student who caught out the profs](http://www.bbc.com/news/magazine-22223190)
+- Chapter 1
+    - [1.1]
+    - [1.3]
+- Chapter 2
+    - [2.2.1]
+    - [2.2.2]
+    - [2.2.3]
+- Notes
+    - ![09.24.2018](09.24.2018.pdf)
+    - ![09.26.2018](09.26.2018.pdf)
+    - ![09.28.2018](09.28.2018.pdf)
